# Brief

./: pyproject.toml  requirements.txt
bot/: __init__.py  main.py
bot/handlers/: __init__.py  content.py  start.py
bot/keyboards/: __init__.py  main.py
bot/services/: __init__.py  database.py  summarize.py  transcribe.py  youtube.py
tests/: test_content_formatting.py  test_database_rules.py  test_youtube_service.py
